ig-class.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: igc-nginx
  namespace: larlingsgatan
spec:
  controller: nginx.org/ingress-controller
